@@ -1,3 +1,9 @@
+2011-03-14  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* doc/xml/manual/abi.xml: Replace docs.sun.com URLs by their OTN
+	equivalents.
+	* doc/html/manual/abi.html: Regenerate.
+
 2011-03-14  Andrey Zholos  <aaz@althenia.net>
 
 	PR libstdc++/48114
